# SoySauce

./: CMakeLists.txt  README.md
include/: Base.h  Client.h  Exceptions.hpp  Server.h  ServerInfo.h  random.h  random.hpp
include/Raft/: God.h  State.h  TaskQueue.h  Timer.h  Transformer.h  Transformer.hpp  words.h  words.hpp
include/Raft/Role/: Role.h  RoleBase.h  RoleCandidate.h  RoleFollower.h  RoleLeader.h
include/Raft/Rpc/: Raft.grpc.pb.h  Raft.pb.h  RaftRpcClient.hpp  RaftRpcServer.hpp
include/Raft/ServerState/: ServerState.h  ServerState_Base.h  ServerState_Candidate.h  ServerState_Follower.h  ServerState_Leader.h
include/Rpc/: ExternalServer.hpp  Soy.grpc.pb.h  Soy.pb.h
protos/: CMakeLists.txt  Raft.proto  Soy.proto  generate.bash
src/: CMakeLists.txt  Client.cpp  Server.cpp  ServerInfo.cpp  main.cpp  random.cpp
src/Raft/: God.cpp  Timer.cpp  Transformer.cpp
src/Raft/Role/: RoleBase.cpp  RoleCandidate.cpp  RoleFollower.cpp  RoleLeader.cpp
src/Raft/Rpc/: Raft.grpc.pb.cc  Raft.pb.cc
src/Raft/ServerState/: ServerState_Candidate.cpp  ServerState_Follower.cpp  ServerState_Leader.cpp
src/Rpc/: Soy.grpc.pb.cc  Soy.pb.cc
